Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef struct
{
	int COO;
	int CFD;
	double CancelamentoISSQN;
	int GNFC;
	int CRO;
	double ValorVendaBruta;
	INTPTR TotalizadoresNaoFiscais;
	int TotalizadoresNaoFiscaisLen;
	INTPTR ICMS;
	int ICMSLen;
	double AcrescimoICMS;
	double DescontoICMS;
	double NaoTributadoICMS;
	INTPTR RelatorioGerencial;
	int RelatorioGerencialLen;
	int CRZ;
	INTPTR ISSQN;
	int ISSQNLen;
	int GRG;
	double ValorGrandeTotal;
	double AcrescimoISSQN;
	double NaoTributadoISSQN;
	double IsentoICMS;
	double SubstituicaoTributariaICMS;
	double DataDaImpressora;
	double TotalOperacaoNaoFiscal;
	double DescontoISSQN;
	double CancelamentoOPNF;
	double AcrescimoOPNF;
	double DescontoOPNF;
	double CancelamentoICMS;
	int GNF;
	double IsentoISSQN;
	double SubstituicaoTributariaISSQN;
	double VendaLiquida;
	int CFC;
	int CCF;
	double TotalISSQN;
	double TotalICMS;
	int CDC;
	int CCDC;
	int NCN;
	double DataDoMovimento;
	INTPTR MeiosDePagamento;
	int MeiosDePagamentoLen;
	char NumeroCOOInicial[30];
	char NumeroDoECF[30];
	char NumeroDeSerie[30];
	char NumeroDeSerieMFD[30];
	char NumeroDaLoja[30];
	double TotalTroco;
} DadosRZRec;


typedef struct
{
	char Numero[14];
	int COO_Cupom;
	int COO_Dav;
	char Titulo[31];
	double Valor;
	double DtEmissao;
} DAVsRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	double Total;
	double Data;
	char TipoDoc[30];
} FormaPagamentoRec;


typedef struct
{
	char Texto[49];
} RelatorioGerencialLinha;


typedef struct
{
	int Count;
	RelatorioGerencialLinha Linhas[];
} RelatorioGerencial;



typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;

DllImport int ECF_AcharECF(const INTPTR ecfHandle, const BOOL Modelo, const BOOL Porta, const int TimeOut);

DllImport int ECF_AcharPorta(const INTPTR ecfHandle, const int TimeOut);

DllImport int ECF_Ativar(const INTPTR ecfHandle);

DllImport int ECF_Create(INTPTR* ecfHandle);

DllImport int ECF_Desativar(const INTPTR ecfHandle);

DllImport int ECF_Destroy(INTPTR* ecfHandle);

DllImport int ECF_GetAguardaImpressao(const INTPTR ecfHandle);

DllImport int ECF_GetAguardandoResposta(const INTPTR ecfHandle);

DllImport int ECF_GetAtivo(const INTPTR ecfHandle);

DllImport int ECF_GetBaud(const INTPTR ecfHandle);

DllImport int ECF_GetColunas(const INTPTR ecfHandle);

DllImport int ECF_GetComandoEnviado(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComandoLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataBits(const INTPTR ecfHandle);

DllImport int ECF_GetHandShake(const INTPTR ecfHandle);

DllImport int ECF_GetHardFlow(const INTPTR ecfHandle);

DllImport int ECF_GetModelo(const INTPTR ecfHandle);

DllImport int ECF_GetParity(const INTPTR ecfHandle);

DllImport int ECF_GetPorta(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRespostaComando(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSoftFlow(const INTPTR ecfHandle);

DllImport int ECF_GetStopBits(const INTPTR ecfHandle);

DllImport int ECF_GetTimeOut(const INTPTR ecfHandle);

DllImport int ECF_GetUltimoErro(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetAguardaImpressao(const INTPTR ecfHandle, const BOOL aguardaImpressao);

DllImport int ECF_SetBaud(const INTPTR ecfHandle, const int baud);

DllImport int ECF_SetComandoLOG(const INTPTR ecfHandle, const PCHAR comandoLog);

DllImport int ECF_SetDataBits(const INTPTR ecfHandle, const int dataBits);

DllImport int ECF_SetHandShake(const INTPTR ecfHandle, const int handShake);

DllImport int ECF_SetHardFlow(const INTPTR ecfHandle, const BOOL hardFlow);

DllImport int ECF_SetModelo(const INTPTR ecfHandle, const int modelo);

DllImport int ECF_SetParity(const INTPTR ecfHandle, const int parity);

DllImport int ECF_SetPorta(const INTPTR ecfHandle, const PCHAR porta);

DllImport int ECF_SetSoftFlow(const INTPTR ecfHandle, const BOOL softFlow);

DllImport int ECF_SetStopBits(const INTPTR ecfHandle, const int stopBits);

DllImport int ECF_SetTimeOut(const INTPTR ecfHandle, const int timeOut);